--- a/myChat/package.json
+++ b/myChat/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "highlight.js": "^11.9.0",
+    "lodash-es": "^4.17.21",
     "monaco-editor": "^0.48.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
